--- a/Water Use Assumptions_v3.qmd
+++ b/Water Use Assumptions_v3.qmd
@@ -41,6 +41,7 @@ rangeCAWCD = "R4:W20"
 
 sheet_cons = "System Conservation"
 
+#####################################################################
 # Function to read Projected State Use excel data and process it
 process_excel_data <- function(file_path_arg, sheet_name_arg, data_range_arg) {
   
@@ -116,6 +117,8 @@ process_excel_data <- function(file_path_arg, sheet_name_arg, data_range_arg) {
   
   return(excel_data)
 }
+
+#########################################################################
 
 ########## Function to find rows containing a string ####################
 
@@ -275,57 +278,244 @@ mwdICSY3 = ifelse(find_rows_containing_string(sct_data,"MWD_Default")[1,4],
                paste0("delivery of ", 
                       round(find_rows_containing_string(sct_data,"MWD_Default")[2,4]/1000,1)))
 
+###### Check for AZ Reductions ######################
+
+x <- find_rows_containing_string(sct_data, "CAP Annual Shortage Volume")[2] 
+y <- find_rows_containing_string(sct_data, "AnnualDCPContribution_AZ")[2]
+z <- find_rows_containing_string(sct_data, "AnnualDeliveryEC_AZ")[2]
+condition1_met <- x > 0; 
+condition2_met <- y > 0; 
+condition3_met <- z > 0
+
+if(x >0 | y>0 | z>0){
+  addreductions = TRUE
+} else {
+  addreductions = FALSE
+}
+
+# --- Define the phrases for each condition ---
+phrase1_text <- paste0("Shortage volume of ", round(x/1000,0), " kaf")
+phrase2_text <- paste0("DCP contribution of ", round(y/1000,0), " kaf")
+phrase3_text <- paste0("ICS delivery of ", round(z/1000,0), " kaf")
+
+active_phrases <- character(0)
+if (condition1_met) { active_phrases <- c(active_phrases, phrase1_text) }
+if (condition2_met) { active_phrases <- c(active_phrases, phrase2_text) }
+if (condition3_met) { active_phrases <- c(active_phrases, phrase3_text) }
+num_active_conditions <- length(active_phrases)
+reductions_scen_all <- ""
+if (num_active_conditions == 1) { reductions_scen_all <- active_phrases[1]
+} else if (num_active_conditions == 2) { reductions_scen_all <- paste0(active_phrases[1], ", and ", active_phrases[2])
+} else if (num_active_conditions == 3) { reductions_scen_all <- paste0(active_phrases[1], ", ", active_phrases[2], ", and ", active_phrases[3])}
+
+
+#####################################################
+
+######################################################
+
+replace_items_conditional <- function(data_tibble,
+                                      lookup_table,
+                                      col_to_replace = 1,
+                                      key_col_in_lookup = 1,
+                                      value_col_in_lookup = 2) {
+  
+  # Validate col_to_replace
+  if (is.character(col_to_replace)) {
+    if (!(col_to_replace %in% names(data_tibble))) {
+      stop(paste("Error: Column '", col_to_replace, "' not found in data_tibble.", sep=""))
+    }
+    # Convert column name to index for internal use
+    col_idx_to_replace <- match(col_to_replace, names(data_tibble))
+  } else if (is.numeric(col_to_replace)) {
+    if (col_to_replace < 1 || col_to_replace > ncol(data_tibble)) {
+      stop("Error: 'col_to_replace' index is out of bounds for data_tibble.")
+    }
+    col_idx_to_replace <- as.integer(col_to_replace)
+  } else {
+    stop("Error: 'col_to_replace' must be a column name (character) or index (numeric).")
+  }
+  
+  # --- Prepare Lookup Table ---
+  # Convert lookup_table to a standardized named vector for efficient lookup
+  if (is.data.frame(lookup_table) || is_tibble(lookup_table)) {
+    if (ncol(lookup_table) < 2 && (is.numeric(key_col_in_lookup) && is.numeric(value_col_in_lookup) && (key_col_in_lookup > ncol(lookup_table) || value_col_in_lookup > ncol(lookup_table)))) {
+      stop("Error: If 'lookup_table' is a data frame/tibble, it must have at least two columns, or valid key/value column specifiers.")
+    }
+    # Handle key_col_in_lookup
+    if (is.character(key_col_in_lookup)) {
+      if (!(key_col_in_lookup %in% names(lookup_table))) stop(paste("Key column '", key_col_in_lookup, "' not found in lookup_table."))
+      keys <- lookup_table[[key_col_in_lookup]]
+    } else if (is.numeric(key_col_in_lookup)) {
+      if (key_col_in_lookup < 1 || key_col_in_lookup > ncol(lookup_table)) stop("Key column index out of bounds for lookup_table.")
+      keys <- lookup_table[[as.integer(key_col_in_lookup)]]
+    } else {
+      stop("Error: 'key_col_in_lookup' must be a column name or index.")
+    }
+    
+    # Handle value_col_in_lookup
+    if (is.character(value_col_in_lookup)) {
+      if (!(value_col_in_lookup %in% names(lookup_table))) stop(paste("Value column '", value_col_in_lookup, "' not found in lookup_table."))
+      values <- lookup_table[[value_col_in_lookup]]
+    } else if (is.numeric(value_col_in_lookup)) {
+      if (value_col_in_lookup < 1 || value_col_in_lookup > ncol(lookup_table)) stop("Value column index out of bounds for lookup_table.")
+      values <- lookup_table[[as.integer(value_col_in_lookup)]]
+    } else {
+      stop("Error: 'value_col_in_lookup' must be a column name or index.")
+    }
+    
+    # Ensure keys and values are of the same length
+    if(length(keys) != length(values)) {
+      stop("Error: Key and value columns in lookup_table must have the same length.")
+    }
+    
+    # Create the named vector, converting keys to character for robust matching
+    internal_lookup_vec <- stats::setNames(as.character(values), as.character(keys))
+    
+  } else if (is.vector(lookup_table) && !is.null(names(lookup_table))) {
+    # It's already a named vector, ensure values and names are character for consistency
+    internal_lookup_vec <- stats::setNames(as.character(lookup_table), as.character(names(lookup_table)))
+  } else {
+    stop("Error: 'lookup_table' must be a named vector, data frame, or tibble.")
+  }
+  
+  # --- Perform Replacement ---
+  # Make a copy to avoid modifying the original tibble by reference (tibbles are copy-on-modify)
+  # but explicit copy is clearer.
+  output_tibble <- data_tibble
+  
+  # Get the actual column data to be modified
+  original_column_data <- output_tibble[[col_idx_to_replace]]
+  
+  # Convert original data to character for matching, if it's not already.
+  # This ensures that numeric keys in lookup_table (if provided as characters)
+  # can match numeric values in the data_tibble column.
+  items_to_check <- as.character(original_column_data)
+  
+  # Get the names (keys) from the lookup vector
+  lookup_keys <- names(internal_lookup_vec)
+  
+  # Perform the replacement
+  # Iterate through each item in the target column
+  new_column_data <- sapply(items_to_check, function(item) {
+    if (item %in% lookup_keys) {
+      # If a match is found, return the replacement value
+      # Use match to get the first corresponding value if there are duplicate keys in lookup_vec
+      # (though setNames typically handles this by taking the last)
+      return(internal_lookup_vec[item])
+    } else {
+      # If no match, return the original item
+      # We need to ensure the type is preserved if no replacement happens.
+      # This is tricky because we converted items_to_check to character.
+      # We'll find the original item's position and return it.
+      # A safer way is to build the new column based on original_column_data's type.
+      return(NA) # Placeholder for items not found
+    }
+  }, USE.NAMES = FALSE)
+  
+  # Coalesce: take new_column_data where it's not NA (i.e., where a replacement occurred),
+  # otherwise take the original data.
+  # This also helps in preserving the original data type if no replacement happened.
+  final_column_values <- ifelse(is.na(new_column_data), original_column_data, new_column_data)
+  
+  # Try to coerce back to original type if possible, or a common compatible type
+  # This part can be complex if types are very different.
+  # For simplicity, if original was factor, try to make new one factor.
+  # If original was numeric and new values are all numeric-coercible, convert.
+  if (is.factor(original_column_data)) {
+    output_tibble[[col_idx_to_replace]] <- factor(final_column_values, levels = unique(c(levels(original_column_data), final_column_values)))
+  } else if (is.numeric(original_column_data) && !is.character(original_column_data) && all(!is.na(suppressWarnings(as.numeric(final_column_values))))) {
+    # Check if all final values can be numbers (even if they came from character lookup values)
+    # And ensure original was not already character (which can look numeric)
+    if (all(final_column_values == suppressWarnings(as.character(as.numeric(final_column_values))))) { # Check if they are "clean" numbers
+      output_tibble[[col_idx_to_replace]] <- as.numeric(final_column_values)
+    } else {
+      output_tibble[[col_idx_to_replace]] <- as.character(final_column_values) # Fallback to character if mixed
+    }
+  } else if (is.integer(original_column_data) && all(!is.na(suppressWarnings(as.integer(final_column_values))))) {
+    if (all(final_column_values == suppressWarnings(as.character(as.integer(final_column_values))))) {
+      output_tibble[[col_idx_to_replace]] <- as.integer(final_column_values)
+    } else {
+      output_tibble[[col_idx_to_replace]] <- as.character(final_column_values) # Fallback to character
+    }
+  }
+  else {
+    # Default to character if types are mixed or complex, or if lookup values introduce non-numeric strings
+    # This is the safest bet if the replacement values are strings.
+    output_tibble[[col_idx_to_replace]] <- as.character(final_column_values)
+  }
+  
+  return(output_tibble)
+}
+
+###########################################################
+
+
+
 cons_CA <- tryCatch({
-    readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeCA)
-  }, error = function(e) {
-    stop(paste("Error reading Excel file:", e$message))
-    return(NULL) # Should not reach here due to stop()
-  })
+  readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeCA)
+}, error = function(e) {
+  stop(paste("Error reading Excel file:", e$message))
+  return(NULL) # Should not reach here due to stop()
+})
 
 cons_CA <- remove_all_na_rows(cons_CA)
 
 cons_NonCAWCD <- tryCatch({
-    readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeNonCAWCD)
-  }, error = function(e) {
-    stop(paste("Error reading Excel file:", e$message))
-    return(NULL) # Should not reach here due to stop()
-  })
+  readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeNonCAWCD)
+}, error = function(e) {
+  stop(paste("Error reading Excel file:", e$message))
+  return(NULL) # Should not reach here due to stop()
+})
 
-cons_NonCAWCDF <- cons_NonCAWCD %>% 
-  remove_all_na_rows() %>% 
-  slice_head(n = -1) %>% # Removes the last row (242 project)
-  summarise(across(where(is.numeric), \(x) sum(x, na.rm = TRUE))) # Sums only numeric columns
-
-cons242 <- find_rows_containing_string(cons_NonCAWCD, "242 Wellfield")
-
-current_year <- format(Sys.Date(), "%Y")
-column_number <- which(grepl(current_year, colnames(cons_CA)))
-
-# cons242[column_number]
+cons_NonCAWCD <- remove_all_na_rows(cons_NonCAWCD)
+cons_NonCAWCD_tot <- cons_NonCAWCD %>% 
+  slice_head(n = -1) %>% 
+  summarise(across(where(is.numeric), \(x) sum(x, na.rm = TRUE))) 
 
 cons_CAWCD <- tryCatch({
-    readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeCAWCD)
-  }, error = function(e) {
-    stop(paste("Error reading Excel file:", e$message))
-    return(NULL) # Should not reach here due to stop()
-  })
+  readxl::read_excel(path = file_path, sheet = sheet_cons, range = rangeCAWCD)
+}, error = function(e) {
+  stop(paste("Error reading Excel file:", e$message))
+  return(NULL) # Should not reach here due to stop()
+})
 
-cons_CAWCD <- cons_CAWCD %>%
-  remove_all_na_rows() 
+cons_CAWCD_tot <- cons_CAWCD %>% 
+  summarise(across(where(is.numeric), \(x) sum(x, na.rm = TRUE)))
+
+current_year <- format(Sys.Date(), "%Y")
+column_number <- which(grepl(current_year, colnames(cons_NonCAWCD)))
+
+
 
 text_to_exclude = "CVWD"
 cons_CA_filt <- cons_CA %>%
   filter(is.na(Contractor) | !str_detect(Contractor, fixed(text_to_exclude)))
 
-cons_CA_filt %>% 
+cvwd <- find_rows_containing_string(cons_CA, text_to_exclude)
+new_item <- c("Contractor" = "CVWD")
+new_item <- c(new_item, colSums(cvwd[,2:ncol(cvwd)]))
+
+cons_CA_filt <- cons_CA %>%
+  filter(is.na(Contractor) | !str_detect(Contractor, fixed(text_to_exclude)))
+
+cons_CA_filt <- rbind(tibble::as_tibble(as.list(new_item)), cons_CA_filt)
+
+name_lookup <- c(
+  "IID 2023-2026" = "IID",
+  "GM Gabrych/Matador" = "Gabrych",
+  "Metro Water Dist" = "Metro Water District",
+  "Spanish Trail Water Company" = "Spanish Trail Water Co."
+)
+
+updated_cons_CA_filt <- replace_items_conditional(cons_CA_filt , name_lookup)
+
+cons_CA_CY <- updated_cons_CA_filt %>% 
   filter(.[[column_number]] > 0) %>% 
   select(1,all_of(column_number))
 
-
-
 # Example condition for conditional Markdown
 # Replace this with your actual condition
-show_2025_detailed_note <- TRUE 
+show_2025_detailed_note <- FALSE 
 # show_2025_detailed_note <- (a == 3) # Another example condition
 
 ```
@@ -352,41 +542,54 @@ if (exists("show_2025_detailed_note") && show_2025_detailed_note) {
 
 ##### California: `r sprintf("%.3f",round(sum(apportionment[1,2])/1000000,3))` maf
 * MWD annual diversion of `r round(as.numeric(find_rows_containing_string(sct_data,"MWDDiversionAnnualFC")[2])/1000,0)` kaf
-    * Projected diversion includes the delivery of 132.1 kaf of ICS
-* Total California System Conservation of 430.7 kaf
+    * Projected diversion includes the `r mwdICSY1` kaf of ICS
+* Total California System Conservation of `r sprintf("%.1f",round(sum(cons_CA[,column_number])/1000,1))` kaf
 
 ```{r generate-bullet-list-apply, results='asis'}
-# Check if result_dplyr has rows and at least two columns before proceeding
-if (nrow(cons_CA_filt) > 0 && ncol(cons_CA_filt) >= 2) {
+# Check if cons_CA_CY has rows and at least two columns before proceeding
+if (nrow(cons_CA_CY) > 0 && ncol(cons_CA_CY) >= 2) {
 
   # Use apply to iterate over rows. For each row:
-  # row[1] will be the value from the first column of result_dplyr
-  # row[2] will be the value from the second column of result_dplyr
-  bullet_points <- apply(cons_CA_filt, 1, function(row) {
-    paste0("  * ", row[1], ": ", row[2], " kaf\n")
+  # row[1] will be the value from the first column of cons_CA_CY
+  # row[2] will be the value from the second column of cons_CA_CY
+  bullet_points <- apply(cons_CA_CY, 1, function(row) {
+    paste0("  * ", row[1], " system conservation of ", round(as.numeric(row[2])/1000,1) , " kaf\n")
   })
   
   # Print each bullet point, separated by a newline
   cat(paste0(bullet_points, collapse = ""))
   
-} else if (nrow(result_dplyr) == 0) {
-  cat("No data available in `result_dplyr` to create a list.")
+} else if (nrow(cons_CA_CY) == 0) {
+  cat("No data available in `cons_CA_CY` to create a list.")
 } else {
-  cat("`result_dplyr` does not have at least two columns as expected.")
+  cat("`cons_CA_CY` does not have at least two columns as expected.")
 }
 ```
 
-    * CVWD system conservation of 45 kaf
-    * IID system conservation of 250 kaf
-    * Bard system conservation of 5.7 kaf
-    * PVID system conservation of 117.0 kaf
-    * Quechan system conservation of 13.0 kaf
-* Needles PSCP volume of 145 af
+* Needles PSCP volume of `r as.numeric(find_rows_containing_string(Max1, "Needles")$value)*-1` af
 
 ##### Arizona: `r sprintf("%.3f",round(sum(apportionment[2,2])/1000000,3))` maf
-* CAP annual diversion of 774 kaf
-    * Projected diversion includes a Shortage volume of 320 kaf, a DCP contribution of 192 kaf by CAWCD, and ICS delivery of 37 kaf
-* DCP contribution will be made by creating 50 kaf of ICS and 142 kaf of non-ICS water
+* CAP annual diversion of `r round(find_rows_containing_string(sct_data, "CAPAnnualFC")[1,2]/1000,0)` kaf
+
+```{r conditional-AZ-reductions, results='asis', echo=FALSE}
+# This R code chunk will print Markdown text if the condition is met.
+# The 'results="asis"' option is crucial for this to work.
+
+if (exists("show_2025_detailed_note") && addreductions) {
+  #cat("\n") # Ensures a new line before the conditional text
+  cat("    * Projected diversion includes a ")
+  cat(reductions_scen_all)
+  cat("\n")
+}
+
+az_dcpICS <- find_rows_containing_string(sct_data, "AnnualCreationDCP_CAWCD")[2]
+az_dcpICS <- ifelse((az_dcpICS/1000) %% 1 != 0, round(az_dcpICS/1000, 1), round(az_dcpICS/1000, 0))
+az_dcpSys <- find_rows_containing_string(sct_data, "AnnualSysWaterforDCP_CAWCD")[2]
+az_dcpSys <- ifelse((az_dcpSys/1000) %% 1 != 0, round(az_dcpSys/1000, 1), round(az_dcpSys/1000, 0))
+
+```
+
+* DCP contribution will be made by creating `r ifelse(az_dcpICS > 0, paste0(az_dcpICS, " kaf of ICS and ", az_dcpSys, " kaf of non-ICS water"), paste0(az_dcpSys, " kaf of non-ICS water"))` 
 * Total non-CAWCD System Conservation of 206.8 kaf
     * FMYN: 13.9 kaf
     * GRIC: 125 kaf
